# inverse-turing-test

./: .env  .env.example  .pre-commit-config.yaml  docker-compose.yml  hello.py  manage.py  pyproject.toml
.claude/: settings.local.json
src/config/: settings.py
