[project]
name = "inverse-turing-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.4",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.1",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "ruff>=0.12.3",
]
